<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Counter">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:layout_marginBottom="60dp"
        android:textColor="#FF5722"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="9dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/plus1"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/plus1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:tag="1"
        android:text="@string/_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/plus2"
        app:layout_constraintEnd_toStartOf="@+id/plus2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/plus2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tag="2"
        android:text="@string/_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/plus3"
        app:layout_constraintEnd_toStartOf="@+id/plus3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus1" />

    <Button
        android:id="@+id/plus3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tag="3"
        android:text="@string/_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/plus4"
        app:layout_constraintEnd_toStartOf="@+id/plus4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus2" />

    <Button
        android:id="@+id/plus4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tag="4"
        android:text="@string/_4"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/plus5"
        app:layout_constraintEnd_toStartOf="@+id/plus5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus3" />

    <Button
        android:id="@+id/plus5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="9dp"
        android:tag="5"
        android:text="@string/_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus4"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/plus6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:tag="6"
        android:text="@string/_6"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/plus7"
        app:layout_constraintEnd_toStartOf="@+id/plus7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/plus7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tag="7"
        android:text="@string/_7"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/plus8"
        app:layout_constraintEnd_toStartOf="@+id/plus8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus6" />

    <Button
        android:id="@+id/plus8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tag="8"
        android:text="@string/_8"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/plus9"
        app:layout_constraintEnd_toStartOf="@+id/plus9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus7" />

    <Button
        android:id="@+id/plus9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tag="9"
        android:text="@string/_9"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/plus10"
        app:layout_constraintEnd_toStartOf="@+id/plus10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus8" />

    <Button
        android:id="@+id/plus10"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tag="10"
        android:text="@string/_10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus9"
        app:layout_constraintTop_toBottomOf="@+id/plus5" />

    <Button
        android:id="@+id/minus1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:tag="-1"
        android:text="@string/minus1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toStartOf="@+id/minus2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/minus2" />

    <Button
        android:id="@+id/minus2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tag="-2"
        android:text="@string/minus2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toStartOf="@+id/minus3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minus1"
        app:layout_constraintTop_toTopOf="@+id/minus3" />

    <Button
        android:id="@+id/minus3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tag="-3"
        android:text="@string/minus3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toStartOf="@+id/minus4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minus2"
        app:layout_constraintTop_toTopOf="@+id/minus4" />

    <Button
        android:id="@+id/minus4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tag="-4"
        android:text="@string/minus4"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toStartOf="@+id/minus5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minus3"
        app:layout_constraintTop_toTopOf="@+id/minus5" />

    <Button
        android:id="@+id/minus5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tag="-5"
        android:text="@string/minus5"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minus4"
        app:layout_constraintTop_toBottomOf="@+id/plus10" />

    <Button
        android:id="@+id/minus6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:tag="-6"
        android:text="@string/minus6"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toStartOf="@+id/minus2"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/minus2" />

    <Button
        android:id="@+id/minus7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:tag="-7"
        android:text="@string/minus7"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toStartOf="@+id/minus3"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toEndOf="@+id/minus1"
        app:layout_constraintTop_toTopOf="@+id/minus3" />

    <Button
        android:id="@+id/minus8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:tag="-8"
        android:text="@string/minus8"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toStartOf="@+id/minus4"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toEndOf="@+id/minus2"
        app:layout_constraintTop_toTopOf="@+id/minus4" />

    <Button
        android:id="@+id/minus9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:tag="-9"
        android:text="@string/minus9"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toStartOf="@+id/minus5"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toEndOf="@+id/minus3"
        app:layout_constraintTop_toTopOf="@+id/minus5" />

    <Button
        android:id="@+id/minus10"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tag="-10"
        android:text="@string/minus10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toEndOf="@+id/minus4"
        app:layout_constraintTop_toBottomOf="@+id/minus5" />

    <Button
        android:id="@+id/plus100"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:tag="100"
        android:text="@string/_100"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toTopOf="@+id/NumEditTextNumber"
        app:layout_constraintEnd_toStartOf="@+id/plus1000"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus6" />

    <Button
        android:id="@+id/plus1000"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:tag="1000"
        android:text="@string/_1000"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#8BC34A"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/plus100"
        app:layout_constraintEnd_toStartOf="@+id/minus100"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus100"
        app:layout_constraintTop_toTopOf="@+id/plus100"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/minus100"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:tag="-100"

        android:text="@string/_m100"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/plus1000"
        app:layout_constraintEnd_toStartOf="@+id/minus1000"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus1000"
        app:layout_constraintTop_toTopOf="@+id/plus1000"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/minus1000"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:tag="-1000"
        android:text="@string/_m1000"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#F44336"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/minus100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minus100"
        app:layout_constraintTop_toTopOf="@+id/minus100"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/reset"
        app:backgroundTint="#FFC107"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumEditTextNumber" />

    <EditText
        android:id="@+id/NumEditTextNumber"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/_0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:soundEffectsEnabled="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus100" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/plus"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintStart_toEndOf="@+id/NumEditTextNumber" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sub"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintStart_toEndOf="@+id/addButton" />

</androidx.constraintlayout.widget.ConstraintLayout>